--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,55 @@
 Django==1.9
+-e git+https://github.com/erikvw/django-crypto-fields@bd3382df6c2998e94b3aa09b79901b5bc474783e#egg=django_crypto_fields
+django-extensions==1.6.1
+-e git+https://github.com/erikvw/django-revision@522bb4e0cc41df969f0cba9485919ec1125cd157#egg=django_revision
+django-simple-history==1.8.1
+django-tastypie==0.13.3
+-e git+https://github.com/botswana-harvard/edc-appointment@develop#egg=edc_appointment
+-e git+https://github.com/botswana-harvard/edc-base@develop#egg=edc_base
+-e git+https://github.com/botswana-harvard/edc-call-manager@develop#egg=edc_call_manager
+-e git+https://github.com/botswana-harvard/edc-configuration@develop#egg=edc_configuration
+-e git+https://github.com/botswana-harvard/edc-consent@develop#egg=edc_consent
+-e git+https://github.com/botswana-harvard/edc-constants@develop#egg=edc_constants
+-e git+https://github.com/botswana-harvard/edc-content-type-map@develop#egg=edc_content_type_map
+-e git+https://github.com/botswana-harvard/edc-dashboard@develop#egg=edc_dashboard
+-e git+https://github.com/botswana-harvard/edc-data-manager@develop#egg=edc_data_manager
+-e git+https://github.com/botswana-harvard/edc-death-report@develop#egg=edc_death_report
+-e git+https://github.com/botswana-harvard/edc-device@develop#egg=edc_device
+-e git+https://github.com/botswana-harvard/edc-export@develop#egg=edc_export
+-e git+https://github.com/botswana-harvard/edc-identifier@develop#egg=edc_identifier
+-e git+https://github.com/botswana-harvard/edc-lab@develop#egg=edc_lab
+-e git+https://github.com/botswana-harvard/edc-locator@develop#egg=edc_locator
+-e git+https://github.com/botswana-harvard/edc-meta-data@develop#egg=edc_meta_data
+-e git+https://github.com/botswana-harvard/edc-notification@develop#egg=edc_notification
+-e git+https://github.com/botswana-harvard/edc-offstudy@develop#egg=edc_offstudy
+-e git+https://github.com/botswana-harvard/edc-quota@develop#egg=edc_quota
+-e git+https://github.com/botswana-harvard/edc-rule-groups@develop#egg=edc_rule_groups
+-e git+https://github.com/botswana-harvard/edc-sync@develop#egg=edc_sync
+-e git+https://github.com/botswana-harvard/edc-templates@develop#egg=edc_templates
+-e git+https://github.com/botswana-harvard/edc-testing@develop#egg=edc_testing
+-e git+https://github.com/botswana-harvard/edc-visit-schedule@develop#egg=edc_visit_schedule
+-e git+https://github.com/botswana-harvard/edc-visit-tracking@develop#egg=edc_visit_tracking
+factory-boy==2.6.1
+fake-factory==0.5.7
+flake8==2.5.4
+-e git+https://github.com/botswana-harvard/getresults-identifier@develop#egg=getresults_identifier
+gitdb==0.6.4
+GitPython==1.0.2
+-e git+https://github.com/botswana-harvard/lab-requisition@develop#egg=lab_requisition
+-e git+https://github.com/botswana-harvard/lis@develop#egg=lis
+mccabe==0.4.0
+numpy==1.11.0
+pep8==1.7.0
+pycrypto==2.6.1
+pycups==1.9.73
+pyflakes==1.0.0
+pyodbc==3.0.10
+python-dateutil==2.5.2
+python-mimeparse==1.5.1
+pytz==2016.3
+requests==2.9.1
+selenium==2.53.2
+six==1.10.0
+smmap==0.9.0
+South==1.0.2
+Unipath==1.1
