--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django
+Django==1.10
 django-braces==1.8.1
 django-cors-headers==1.1.0
 django-crispy-forms==1.6.0
@@ -8,13 +8,12 @@ django-js-reverse==0.7.2
 django-model-utils==2.5
 -e git+https://github.com/erikvw/django-revision@49969cab29fdef1b1b619923edc621ace6469323#egg=django_revision
 django-simple-history==1.8.1
-django-star-ratings==0.5.1
 django-tastypie==0.13.3
 djangorestframework==3.3.3
 -e git+https://github.com/botswana-harvard/edc-appointment@a736be531cd650926184e57023adeb0545faa89f#egg=edc_appointment
 -e git+https://github.com/botswana-harvard/edc-base@c6f2c87a9a1090a97e7a7902fce288b25990ca50#egg=edc_base
 -e git+https://github.com/botswana-harvard/edc-call-manager@f70ed1fe60edecd683df2e2292471adf5ca3d20d#egg=edc_call_manager
--e git+https://github.com/botswana-harvard/edc-code-lists@4984ef83aecb8dc7ec0428278a867dd38ce0cf68#egg=edc_code_lists
+-e git+https://github.com/botswana-harvard/edc-code-lists@6419b356bc3d63a4d30686ce47c10222e790b484#egg=edc_code_lists
 -e git+https://github.com/botswana-harvard/edc-configuration@eb843e6b83e970c35bb4f6197deb3fd0cd0804d8#egg=edc_configuration
 -e git+https://github.com/botswana-harvard/edc-consent@0a5545f6c991d32f02e57947b2b283ef27fff2f5#egg=edc_consent
 -e git+https://github.com/botswana-harvard/edc-constants@6a06b691a15894759e9a279892c0ba4961e9bed0#egg=edc_constants
