--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ Django==1.9.2
 django-braces==1.8.1
 django-cors-headers==1.1.0
 django-crispy-forms==1.6.0
-django-crypto-fields==0.1.7
+-e git+https://github.com/erikvw/django-crypto-fields@18b3b402fb3781bbd8c5da0e833aff19ae818303#egg=django_crypto_fields
 django-extensions==1.6.1
 django-js-reverse==0.7.2
 django-model-utils==2.5
--e git+https://github.com/erikvw/django-revision@49969cab29fdef1b1b619923edc621ace6469323#egg=django_revision
+django-revision==0.1.9
 django-simple-history==1.8.1
 django-tastypie==0.13.3
 djangorestframework==3.3.3
@@ -33,7 +33,7 @@ djangorestframework==3.3.3
 -e git+https://github.com/botswana-harvard/edc-registration@7a289d2c06d35e7af3e5ac70ebb8d8ec8f0c9bb0#egg=edc_registration
 -e git+https://github.com/botswana-harvard/edc-rest@bcbf35de88a7c4d76e395d8b89b0c772dd1112b8#egg=edc_rest
 -e git+https://github.com/botswana-harvard/edc-rule-groups@a567afc226da0771e94015564d38fc845f81ddc0#egg=edc_rule_groups
--e git+https://github.com/botswana-harvard/edc-sync@86fb69ba34a734f0cc77d8b21c8fcebd3e4e61d5#egg=edc_sync
+-e git+https://github.com/botswana-harvard/edc-sync@77147e46a1c08f5f9115eaf2c5942f80364eae1b#egg=edc_sync
 -e git+https://github.com/botswana-harvard/edc-templates@c79a1d3a541fed424451f6da455bce2b6c84e07c#egg=edc_templates
 -e git+https://github.com/botswana-harvard/edc-testing@d0444af275efc731e923b3239111e7a470802e42#egg=edc_testing
 -e git+https://github.com/botswana-harvard/edc-visit-schedule@2aa61cec1950ee092f3ed1fa3098015a7100cc08#egg=edc_visit_schedule
