--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,35 @@
 Django
+corsheader
+
 git+https://github.com/botswana-harvard/edc-base@develop#egg=edc_base
+git+https://github.com/botswana-harvard/edc-protocol@develop#egg=edc_protocol
 git+https://github.com/erikvw/django-crypto-fields@develop#egg=django_crypto_fields
 git+https://github.com/erikvw/django-revision@develop#egg=django_revision
-git+https://github.com/botswana-harvard/edc-appointment@85e9833ff43912d5f8cdd80a8530e8d1f6e46ad5#egg=edc_appointment
+git+https://github.com/botswana-harvard/edc-appointment@develop#egg=edc_appointment
 git+https://github.com/botswana-harvard/edc-call-manager@develop#egg=edc_call_manager
-git+https://github.com/botswana-harvard/edc-code-lists@6419b356bc3d63a4d30686ce47c10222e790b484#egg=edc_code_lists
-git+https://github.com/botswana-harvard/edc-configuration@eb843e6b83e970c35bb4f6197deb3fd0cd0804d8#egg=edc_configuration
-git+https://github.com/botswana-harvard/edc-consent@0a5545f6c991d32f02e57947b2b283ef27fff2f5#egg=edc_consent
-git+https://github.com/botswana-harvard/edc-constants@6a06b691a15894759e9a279892c0ba4961e9bed0#egg=edc_constants
-git+https://github.com/botswana-harvard/edc-content-type-map@7614883ed1e89eb5a90ee92df91746ae54965ec3#egg=edc_content_type_map
-git+https://github.com/botswana-harvard/edc-dashboard@17f491b3206c162008b76f75a82e62b4d91e68da#egg=edc_dashboard
-git+https://github.com/botswana-harvard/edc-data-manager@a0633a457c205c4361f002d27649a4d6764148bb#egg=edc_data_manager
-git+https://github.com/botswana-harvard/edc-death-report@6ce18e5b6b4a2e99efef43eb0434ed44bd828461#egg=edc_death_report
-git+https://github.com/botswana-harvard/edc-device@e641387fbe9d672b73723e624105b503a907fd66#egg=edc_device
-git+https://github.com/botswana-harvard/edc-export@aca36b5c147550194d1adcbd4bd0a92bc0a9ce6c#egg=edc_export
-git+https://github.com/botswana-harvard/edc-identifier@d5e030cd844f12a660f19e370e7d4044e4fe1b73#egg=edc_identifier
-git+https://github.com/botswana-harvard/edc-lab@96372724b8b0861ec67775b6799c15a363f4b0f4#egg=edc_lab
+git+https://github.com/botswana-harvard/edc-code-lists@develop#egg=edc_code_lists
+git+https://github.com/botswana-harvard/edc-configuration@develop#egg=edc_configuration
+git+https://github.com/botswana-harvard/edc-consent@develop#egg=edc_consent
+git+https://github.com/botswana-harvard/edc-constants@develop#egg=edc_constants
+git+https://github.com/botswana-harvard/edc-content-type-map@develop#egg=edc_content_type_map
+git+https://github.com/botswana-harvard/edc-dashboard@develop#egg=edc_dashboard
+git+https://github.com/botswana-harvard/edc-data-manager@develop#egg=edc_data_manager
+git+https://github.com/botswana-harvard/edc-death-report@develop#egg=edc_death_report
+git+https://github.com/botswana-harvard/edc-device@develop#egg=edc_device
+git+https://github.com/botswana-harvard/edc-export@develop#egg=edc_export
+git+https://github.com/botswana-harvard/edc-identifier@develop#egg=edc_identifier
+git+https://github.com/botswana-harvard/edc-lab@develop#egg=edc_lab
 git+https://github.com/botswana-harvard/edc-label@develop#egg=edc_label
-git+https://github.com/botswana-harvard/edc-locator@2275ddff0c119a4666902d2fac0dba6159993bc0#egg=edc_locator
-git+https://github.com/botswana-harvard/edc-meta-data@fe3ee7f855aad41f68c60fc97b8a9b3713239847#egg=edc_meta_data
-git+https://github.com/botswana-harvard/edc-notification@7de21100ecccd46afd3fa3ea4d03390d2bab033c#egg=edc_notification
-git+https://github.com/botswana-harvard/edc-offstudy@f1b2d2c1a5b64e16e2d03cf5a12ade564b891e5b#egg=edc_offstudy
-git+https://github.com/botswana-harvard/edc-registration@7a289d2c06d35e7af3e5ac70ebb8d8ec8f0c9bb0#egg=edc_registration
-git+https://github.com/botswana-harvard/edc-rest@bcbf35de88a7c4d76e395d8b89b0c772dd1112b8#egg=edc_rest
-git+https://github.com/botswana-harvard/edc-rule-groups@a567afc226da0771e94015564d38fc845f81ddc0#egg=edc_rule_groups
+git+https://github.com/botswana-harvard/edc-locator@develop#egg=edc_locator
+git+https://github.com/botswana-harvard/edc-meta-data@develop#egg=edc_meta_data
+git+https://github.com/botswana-harvard/edc-notification@develop#egg=edc_notification
+git+https://github.com/botswana-harvard/edc-offstudy@develop#egg=edc_offstudy
+git+https://github.com/botswana-harvard/edc-registration@develop#egg=edc_registration
+git+https://github.com/botswana-harvard/edc-rest@develop#egg=edc_rest
+git+https://github.com/botswana-harvard/edc-rule-groups@develop#egg=edc_rule_groups
 git+https://github.com/botswana-harvard/edc-sync@develop#egg=edc_sync
-git+https://github.com/botswana-harvard/edc-templates@c79a1d3a541fed424451f6da455bce2b6c84e07c#egg=edc_templates
-git+https://github.com/botswana-harvard/edc-visit-schedule@2aa61cec1950ee092f3ed1fa3098015a7100cc08#egg=edc_visit_schedule
-git+https://github.com/botswana-harvard/edc-visit-tracking@6c9f910613d91302c9c08fc0b1d04c9e7cc33a40#egg=edc_visit_tracking
-git+https://github.com/botswana-harvard/lab-requisition@e90bfd28465c10565edd3d37d15a91f39fe51f2e#egg=lab_requisition
-git+https://github.com/botswana-harvard/lis@5efb6e9f1ee63ca9ad640986838ffb8a4ed6e246#egg=lis
-numpy
-pandas
-pyodbc
+git+https://github.com/botswana-harvard/edc-templates@develop#egg=edc_templates
+git+https://github.com/botswana-harvard/edc-visit-schedule@develop#egg=edc_visit_schedule
+git+https://github.com/botswana-harvard/edc-visit-tracking@develop#egg=edc_visit_tracking
+git+https://github.com/botswana-harvard/lab-requisition@develop#egg=lab_requisition
+git+https://github.com/botswana-harvard/lis@develop#egg=lis
