--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django
-corsheader
+Django==1.10.0
+#corsheader
 
 git+https://github.com/botswana-harvard/edc-base@develop#egg=edc_base
 git+https://github.com/botswana-harvard/edc-protocol@develop#egg=edc_protocol
