--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.5"
 
 env:
-  - DJANGO_VERSION=1.9
+  - DJANGO_VERSION=1.10
 
 addons:
   apt_packages:
@@ -34,7 +34,7 @@ install:
   #- pip install M2Crypto
   #- pip install pyodbc
   - pip install pycups
-  #- pip install mysql-python
+  - pip install mysql-python
   - pip install -q -r requirements.txt
 
 before_script:
@@ -44,7 +44,7 @@ before_script:
   - mysql -e 'create database td_lab CHARACTER SET utf8;'
 
 script: 
-  - coverage run --source=td_maternal,td_infant,td_lab manage.py test
+  - coverage run --source=td_maternal,td_infant manage.py test
 
 after_success:
   - coveralls
