--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ install:
   #- pip install M2Crypto
   #- pip install pyodbc
   - pip install pycups
-  - pip install mysql-python
+  #- pip install mysql-python
   - pip install -q -r requirements.txt
 
 before_script:
