--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
      - libcups2-dev
      - unixodbc-dev
      - python-mysqldb
+     - libmysqlclient-dev
 
 services:
   - mysql
@@ -35,6 +36,7 @@ install:
   #- pip install pyodbc
   - pip install pycups
   #- pip install mysql-python
+  - pip install mysqlclient
   - pip install -q -r requirements.txt
 
 before_script:
