added aliquot admin and model to init

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 ignore = E226,E302,E41,F401
 max-line-length = 120
 max-complexity = 10
-exclude = tshilo_dikotla/apps/*/migrations/*,tshilo_dikotla/static/
+exclude = tshilo-dikotla/*/migrations/*,tshilo_dikotla/static/,tshilo-dikotla/gunicorn.conf,tshilo_dikotla/databases.py
