--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django
+numpy
 #corsheader
 git+https://github.com/botswana-harvard/edc-base@develop#egg=edc_base
 git+https://github.com/botswana-harvard/edc-appointment@develop#egg=edc_appointment
