--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ django-crispy-forms==1.6.0
 django-extensions==1.6.1
 django-js-reverse==0.7.2
 django-model-utils==2.5
-git+https://github.com/erikvw/django-revision@develop#egg=django_revision
+git+https://github.com/erikvw/django-revision@97ebafb74f628af9913a1be33965cce104fe9300#egg=django_revision
 git+https://github.com/erikvw/django-appconfig-ini@develop#egg=django_appconfig_ini
 django-simple-history==1.8.1
 django-tastypie==0.13.3
